# embedded_mixed_signal_analyzer

./: Cargo.toml  Containerfile  README.md  memory.x
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
container/: Containerfile  podman-compose.yml
doc/: PININFO.md  reame_test.md
firmware/: Cargo.toml  build.rs  memory.x
firmware/.cargo/: config.toml
firmware/src/: analog.rs  buffer.rs  digital.rs  health.rs  main.rs  mpu.rs  protocol.rs
host/src/: health.rs  rtt.rs
host/src/gui/: waveform.rs  window.rs
shared/: reame_test.md
shared/src/: lib.rs
src/: main.rs
