[package]
name = "embedded_oscilloscope"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor  = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-stm32     = { version = "0.6",  features = ["stm32f401re", "time-driver-any", "exti", "defmt"] }
embassy-time      = { version = "0.5",  features = ["defmt", "defmt-timestamp-uptime"] }

defmt         = "1.0"
defmt-rtt     = "1.0"
panic-probe   = { version = "1.0", features = ["print-defmt"] }

cortex-m      = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt   = "0.7"
critical-section = "1.0"