[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# Keep dependencies minimal — every byte costs flash space.
[dependencies]
cortex-m     = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt  = "0.7"
panic-halt   = "0.2"

[profile.release]
opt-level = "s"   # optimise for size, not speed
debug     = 2
lto       = true

[profile.dev]
opt-level = "z"
debug     = 2
